# pipe-iot-rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile.iot  Dockerfile.rust  README.md  catalog-info-iotyrelay.yaml  catalog-info-rusthist.yaml  catalog-info.yaml  sonar-project.properties
.github/workflows/: build-and-update-manifest.yaml
devops/: compile.sh  dap-iotrelay.service  dap-rusthist.service  limpar-parts.sh  restart_iotrelay.sh  restart_rusthist.sh  run_iotrelay.sh  status_iotrelay.sh  status_rusthist.sh
src/: main_br2db.rs  main_getmac.rs  main_hist.rs  main_iotrelay.rs  main_realtime.rs  main_telserv.rs
src/app_br2db/: api.rs  configs.rs  global_vars.rs  log.rs  mqtt_task.rs  on_control_message.rs  on_data_message.rs  on_mqtt_message.rs  on_table_not_found.rs  save_to_bigquery.rs  save_to_dynamodb.rs  socket_protocol.rs  statistics.rs
src/app_getmac/: configs.rs  fetch_mac.rs  global_vars.rs  http_router.rs  lib_fs.rs
src/app_history/: cache_files.rs  compiler_queues.rs  configs.rs  dac_hist.rs  dal_hist.rs  dam_hist.rs  dev_export.rs  dma_hist.rs  dmt_hist.rs  dri_hist.rs  dut_hist.rs  energy_hist.rs  energy_stats.rs  global_vars.rs  http_router.rs
src/app_realtime/: configs.rs  devs_cache.rs  global_vars.rs  http_router.rs  mqtt_task.rs  on_mqtt_message.rs
src/app_relay/: commands_sender.rs  configs.rs  dash_update.rs  global_vars.rs  http_router.rs  mqtt_task.rs  on_mqtt_message.rs  payload_conversions.rs  redis_connection.rs  state_persistence.rs  statistics.rs
src/app_telserv/: configs.rs  global_vars.rs  merge_calculated_values.rs  (+3 more)
(+67 files in other folders)
